# python-project-50

./: Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: gendiff.yml
gendiff/: __init__.py  cli.py  compare.py  formatter.py  gendiff.py  parser.py  read_file.py
gendiff/formatters/: __init__.py  formatter.py  json.py  plain.py  stylish.py
gendiff/scripts/: __init__.py  gendiff.py
tests/: __init__.py  test_gendiff.py  test_invalid_params.py
tests/fixtures/: json_diff.txt
